# dictionary

./: CMakeLists.txt  Dockerfile  README.md  dictionary.cpp  dictionary.vcxproj  dictionary.vcxproj.filters  test.cpp
.github/workflows/: ccpp.yml
